optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_invalid_segment_expr1.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStyles$ } from '@qwik.dev/core';
import css1 from './global.css';
import css2 from './style.css';

export const App = component$(() => {
	const style = `${css1}${css2}`;
	useStyles$(style);
	const render = () => {
		return (
			<div></div>
		)
	};
	return $(render);
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_GZvaNEi0pm0 = ()=>import("./test.tsx_test.tsx_App_component_useStyles_GZvaNEi0pm0");
const i_zT40dUYPQNs = ()=>import("./test.tsx_test.tsx_App_component_1_zT40dUYPQNs");
const i_XumqEURaLxI = ()=>import("./test.tsx_test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "test.tsx_App_component_XumqEURaLxI"));


None
============================= test.tsx_test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import css1 from "./global.css";
import css2 from "./style.css";
import { qrl, useStylesQrl } from "@qwik.dev/core";
const i_GZvaNEi0pm0 = ()=>import("./test.tsx_test.tsx_App_component_useStyles_GZvaNEi0pm0");
export const test.tsx_App_component_XumqEURaLxI = ()=>{
	const style = `${css1}${css2}`;
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_GZvaNEi0pm0, "test.tsx_App_component_useStyles_GZvaNEi0pm0", [style]));
	const render = /*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_GZvaNEi0pm0, "test.tsx_App_component_useStyles_GZvaNEi0pm0", [style]));
	return /*#__PURE__*/ qrl(i_zT40dUYPQNs, "test.tsx_App_component_1_zT40dUYPQNs", [render]);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    156,
    295
  ]
}
*/
============================= test.tsx_test.tsx_App_component_useStyles_GZvaNEi0pm0.js (ENTRY POINT)==

export const test.tsx_App_component_useStyles_GZvaNEi0pm0 = style;


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_useStyles_GZvaNEi0pm0",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "GZvaNEi0pm0",
  "canonicalFilename": "test.tsx_test.tsx_App_component_useStyles_GZvaNEi0pm0",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": true,
  "loc": [
    209,
    214
  ]
}
*/
============================= test.tsx_test.tsx_App_component_1_zT40dUYPQNs.js (ENTRY POINT)==

export const test.tsx_App_component_1_zT40dUYPQNs = render;


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_App_component_1_zT40dUYPQNs",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "zT40dUYPQNs",
  "canonicalFilename": "test.tsx_test.tsx_App_component_1_zT40dUYPQNs",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    285,
    291
  ]
}
*/
== DIAGNOSTICS ==

[]
