optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_jsx.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, h, Fragment } from '@qwik.dev/core';

export const Lightweight = (props) => {
	return (
		<div>
			<>
				<div/>
				<button {...props}/>
			</>
		</div>
	)
};

export const Foo = component$((props) => {
	return $(() => {
		return (
			<div>
				<>
					<div class="class"/>
					<div class="class"></div>
					<div class="class">12</div>
				</>
				<div class="class">
					<Lightweight {...props}/>
				</div>
				<div class="class">
					<div/>
					<div/>
					<div/>
				</div>
				<div class="class">
					{children}
				</div>
			</div>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Foo_component_HTDRsvUbLiE = (props)=>{
	return /*#__PURE__*/ qrl(i_DvU6FitWglY, "Foo_component_1_DvU6FitWglY", [props]);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    215,
    579
  ]
}
*/
============================= test.tsx_Foo_component_1_DvU6FitWglY.js (ENTRY POINT)==

import { Lightweight } from "./test";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Foo_component_1_DvU6FitWglY = ()=>{
	const [props] = useLexicalScope();
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		/*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
			/*#__PURE__*/ _jsxSorted("div", null, { class: "class" }, null, 3, null),
			/*#__PURE__*/ _jsxSorted("div", null, { class: "class" }, null, 3, null),
			/*#__PURE__*/ _jsxSorted("div", null, { class: "class" }, "12", 3, null)
		], 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { class: "class" }, _jsxSplit(Lightweight, { ..._getVarProps(props) }, _getConstProps(props), null, 0, null), 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { class: "class" }, [
			/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null),
			/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null),
			/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null)
		], 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { class: "class" }, children, 1, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "test.tsx_Foo_component_1_DvU6FitWglY",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    238,
    575
  ]
}
*/
============================= test.js ==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_DvU6FitWglY = ()=>import("./test.tsx_Foo_component_1_DvU6FitWglY");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
export const Lightweight = (props)=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null), /*#__PURE__*/ _jsxSplit("button", { ..._getVarProps(props) }, _getConstProps(props), null, 0, null)], 3, null), 3, null);
};
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
