optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_jsx_import_source.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

/* @jsxImportSource react */

import { qwikify$ } from './qwikfy';

export const App = () => (
	<div onClick$={()=>console.log('App')}></div>
);

export const App2 = qwikify$(() => (
	<div onClick$={()=>console.log('App2')}></div>
));

============================= test.tsx_App2_qwikify_RKJW7oCMdS4.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_JMFu22bme2k = ()=>import("./test.tsx_App2_qwikify_div_onClick_JMFu22bme2k");
export const App2_qwikify_RKJW7oCMdS4 = ()=>/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_JMFu22bme2k, "App2_qwikify_div_onClick_JMFu22bme2k") }, null, null, 3, null);


None
/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_RKJW7oCMdS4",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify",
  "hash": "RKJW7oCMdS4",
  "canonicalFilename": "test.tsx_App2_qwikify_RKJW7oCMdS4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false,
  "loc": [
    175,
    232
  ]
}
*/
============================= test.tsx_App2_qwikify_div_onClick_JMFu22bme2k.js (ENTRY POINT)==

export const App2_qwikify_div_onClick_JMFu22bme2k = ()=>console.log("App2");


None
/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_div_onClick_JMFu22bme2k",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify_div_onClick",
  "hash": "JMFu22bme2k",
  "canonicalFilename": "test.tsx_App2_qwikify_div_onClick_JMFu22bme2k",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_div_onClick_ooDUXFGjp9U.js (ENTRY POINT)==

export const App_div_onClick_ooDUXFGjp9U = ()=>console.log("App");


None
/*
{
  "origin": "test.tsx",
  "name": "App_div_onClick_ooDUXFGjp9U",
  "entry": null,
  "displayName": "test.tsx_App_div_onClick",
  "hash": "ooDUXFGjp9U",
  "canonicalFilename": "test.tsx_App_div_onClick_ooDUXFGjp9U",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { qwikifyQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qwikifyQrl } from "./qwikfy";
const i_ooDUXFGjp9U = ()=>import("./test.tsx_App_div_onClick_ooDUXFGjp9U");
const i_RKJW7oCMdS4 = ()=>import("./test.tsx_App2_qwikify_RKJW7oCMdS4");
export const App = ()=>/*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_ooDUXFGjp9U, "App_div_onClick_ooDUXFGjp9U") }, null, null, 3, null);
export const App2 = /*#__PURE__*/ qwikifyQrl(/*#__PURE__*/ qrl(i_RKJW7oCMdS4, "App2_qwikify_RKJW7oCMdS4"));


None
== DIAGNOSTICS ==

[]
