optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_jsx_keyed.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<>
			<Cmp key="stuff"></Cmp>
			<Cmp></Cmp>
			<Cmp prop="23"></Cmp>
			<Cmp prop="23" key={props.stuff}></Cmp>
			<p key={props.stuff}>Hello Qwik</p>
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = ()=>import("./test.tsx_App_component_XumqEURaLxI");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));


None
============================= test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App_component_XumqEURaLxI = (props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		_jsxSorted(Cmp, null, null, null, 3, "stuff"),
		_jsxSorted(Cmp, null, null, null, 3, null),
		_jsxSorted(Cmp, null, { prop: "23" }, null, 3, null),
		_jsxSorted(Cmp, null, { prop: "23" }, null, 3, props.stuff),
		/*#__PURE__*/ _jsxSorted("p", null, null, "Hello Qwik", 3, props.stuff)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    281
  ]
}
*/
== DIAGNOSTICS ==

[]
