optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_lightweight_functional.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Foo = component$((props) => {
	return (
		<div>
			<Button {...props} />
			<ButtonArrow {...props} />
		</div>
	);
}, {
	tagName: "my-foo",
});

export function Button({text, color}) {
	return (
		<button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
	);
}

export const ButtonArrow = ({text, color}) => {
	return (
		<button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
	);
}

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

export const Foo_component_HTDRsvUbLiE = (props)=>{
	return <div>
			<Button {...props} />
			<ButtonArrow {...props} />
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    179
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
const i_onClick = ()=>import("./test.tsx");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));
export function Button({ text, color }) {
	return <button on:color={color} on:click={/*#__PURE__*/ qrl(i_onClick, "Button_button_onClick")}>{text}</button>;
}
export const ButtonArrow = ({ text, color })=>{
	return <button on:color={color} on:click={/*#__PURE__*/ qrl(i_onClick, "ButtonArrow_button_onClick")}>{text}</button>;
};


None
== DIAGNOSTICS ==

[]
